--- a/case_study_mpa/3_mpa_spp_analysis.Rmd
+++ b/case_study_mpa/3_mpa_spp_analysis.Rmd
@@ -465,11 +465,11 @@ barchart_mpa_gap <- ggplot(mpa_all_runs1,
 
 print(barchart_mpa_gap)
 ggsave(plot = barchart_mpa_gap,
-       filename = file.path(dir_fig, 'fig4_barchart_mpa_gap.png'),
+       filename = file.path(dir_fig, 'barchart_mpa_gap.png'),
        width = 11.4, height = 5, units = 'cm', dpi = 600)
-ggsave(plot = barchart_mpa_gap,
-       filename = file.path(dir_fig, 'fig4_barchart_mpa_gap.tif'), device = 'tiff',
-       width = 11.4, height = 5, units = 'cm', dpi = 600)
+# ggsave(plot = barchart_mpa_gap,
+#        filename = file.path(dir_fig, 'barchart_mpa_gap.tif'), device = 'tiff',
+#        width = 11.4, height = 5, units = 'cm', dpi = 600)
 
 mpa_all_runs_wide <- mpa_all_runs1 %>%
   mutate(p_cat = paste(round(p_cat, 1), '%', sep = '')) %>%
