--- a/ms_0_abst.Rmd
+++ b/ms_0_abst.Rmd
@@ -1,6 +1,17 @@
 
 ## Abstract
 
-<!--_Abstract. Provide an abstract of no more than 250 words on page 2 of the manuscript. Abstracts should explain to the general reader the major contributions of the article. References in the abstract must be cited in full within the abstract itself and cited in the text._-->
+<!-- 
+The Abstract comes after the title page in the manuscript file. The abstract text is also entered in a separate field in the submission system.
 
-Species distribution data provide the foundation for a wide range of ecological research studies and conservation management decisions, yet most species ranges remain unknown, and existing range maps often suffer from data limitations and inconsistencies.  AquaMaps and the International Union for Conservation of Nature (IUCN) are two distinct efforts to map marine species distributions at a global scale.  Together these databases represent `r format(n_spp_all, big.mark = ',')` species (`r format(p_spp_am, big.mark = ',')`% within AquaMaps, `r format(p_spp_iucn, big.mark = ',')`% within IUCN), with only `r format(n_spp_both, big.mark = ',')` shared species.  Here we examine differences in predicted species ranges between the two datasets and find that these misalignments mainly result from divergent methodologies that introduce differing frequencies of commission and omission errors.  We illustrate the scientific and management implications of these differences by repeating two recent applications - an assessment of global biodiversity within the Ocean Health Index and a global analysis of gaps in coverage of marine protected areas - and find significantly different results depending on how the two datasets are used.  Until a single, highly accurate dataset of global marine species ranges becomes available, understanding the implications of dataset differences for conservation planning and decision-making remains essential.
+The Abstract should:
+  Describe the main objective(s) of the study
+  Explain how the study was done, including any model organisms used, without methodological detail
+  Summarize the most important results and their significance
+  Not exceed 300 words
+Abstracts should not include:
+  Citations
+  Abbreviations, if possible
+-->
+
+Species distribution data provide the foundation for a wide range of ecological research studies and conservation management decisions, yet most species ranges remain unknown, and existing range maps often suffer from data limitations and inconsistencies.  AquaMaps and the International Union for Conservation of Nature (IUCN) are two distinct efforts to map marine species distributions at a global scale.  Together these databases represent `r format(n_spp_all, big.mark = ',')` species (`r format(p_spp_am, big.mark = ',')`% within AquaMaps, `r format(p_spp_iucn, big.mark = ',')`% within IUCN), with only `r format(n_spp_both, big.mark = ',')` shared species.  Here we examine differences in predicted species ranges between the two datasets and find that these misalignments mainly result from divergent methodologies that introduce differing frequencies of commission and omission errors.  We illustrate the scientific and management implications of these differences by repeating a global analysis of gaps in coverage of marine protected areas, and find significantly different results depending on how the two datasets are used.  While we suggest methods to address specific errors in each spatial dataset, it remains essential to understand the implications of dataset differences for conservation planning and decision-making.
