--- a/ms_2_methods.Rmd
+++ b/ms_2_methods.Rmd
@@ -3,18 +3,16 @@
 
 ## About the datasets
 
-The IUCN publishes species range maps developed by species experts.  These experts outline spatial boundaries of a given species' "limits of distribution" [@iucn_iucn_2015], based on observation records and informed by expert understanding of species' range and habitat preferences.  ___Fig. SXXX___
+The IUCN publishes species range maps developed by species experts.  These experts outline spatial boundaries of a given species' "limits of distribution" [@iucn_iucn_2015], based on observation records and informed by expert understanding of species' range and habitat preferences.  ___Fig SXXX___
 
-In contrast, AquaMaps models species distribution based on environmental preferences, such as temperature, depth, and salinity, deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a global 0.5° grid to determine suitable habitat, resulting in a "probability of occurrence" for each species.  Of these, 1296 (5.7%) have been further refined through an expert review process [@kaschner_mapping_2006; @ready_predicting_2010]. ___Fig. SXXX___
+In contrast, AquaMaps models species distribution based on environmental preferences, such as temperature, depth, and salinity, deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a global 0.5° grid to determine suitable habitat, resulting in a "probability of occurrence" for each species.  Of these, 1296 (5.7%) have been further refined through an expert review process [@kaschner_mapping_2006; @ready_predicting_2010]. ___Fig SXXX___
 
 <!--
 ___OMIT: Studies using AquaMaps data frequently define "presence" by applying a probability threshold, e.g., previously, the Ocean Health Index defined presence as 40% or greater probability of occurrence [@halpern_index_2012; @halpern_patterns_2015].  In the 2016 OHI assessment, the presence threshold was eliminated, to better approximate the "extent of occurrence" generally indicated by IUCN maps, since the two datasets are used together.___
 -->
 
 __Comparison of taxonomic and regional distribution__:
-To examine the overall taxonomic distribution across the spatial datasets (Fig. 1A), we grouped species by taxonomic class and data source, and determined the proportion of each class represented in each dataset.  
-
-To compare the spatial representation of the two datasets directly, we rasterized the IUCN species polygons to the same 0.5° grid as the AquaMaps species maps; we determined species presence within a grid cell as any non-zero overlap of a species polygon with the cell  ___(Fig. SXXX)___.  For the AquaMaps dataset, we determined per-cell species count by including all species with non-zero probability of occurrence, to best approximate the "extent of occurrence" generally indicated by IUCN maps ___(Fig. SXXX)___.  We represented relative distribution of species count for each dataset by plotting average species count against latitude and longitude (Fig. 1B, 1C).
+To examine the overall taxonomic distribution across the spatial datasets, we grouped species by taxonomic class and data source, and determined the proportion of each class represented in each dataset.  To compare the spatial representation of the two datasets directly, we rasterized the IUCN species polygons to the same 0.5° grid as the AquaMaps species maps; we determined species presence within a grid cell as any non-zero overlap of a species polygon with the cell  ___(Fig SXXX)___.  For the AquaMaps dataset, we determined per-cell species count by including all species with non-zero probability of occurrence, to best approximate the "extent of occurrence" generally indicated by IUCN maps ___(Fig SXXX)___.
 
 __Comparison of paired maps__:
 Using genus and species binomials as a matching key, we identified "paired map" species - the subset of marine species that have range maps in both IUCN and AquaMaps current native distribution.  We used the taxize package [@REF] in R [@REF] to standardize species names and synonyms; for species with separate subpopulation maps in IUCN, we combined all subpopulations to create a single global population.   For each of these paired map species, we determined species presence within each spatial cell for each dataset using the same criteria outlined above.
@@ -29,7 +27,7 @@ For each paired map species, $A_{small}$ and $A_{large}$ indicate the smaller an
 
 Distribution alignment uses overlapping predictions of presence as means of identifying areas of higher confidence.  Area ratio provides a proxy for frequency of commission and/or omission errors.
 
-To examine errors of commission related to depth, we selected corals as a case study due to their importance in supporting biodiversity as well as their dependence on photosynthesis.  Extracting data from the IUCN API [@REF?] we identified the depth limitations of each of the coral species mapped in the IUCN dataset.  We created a 200 m bathymetry raster from Natural Earth's 200 m bathymetry polygon [@natural_earth_XXX] ___(Fig. SXXX)___ and masked our IUCN coral rasters to identify mapped coral presence below 200 m.  The resulting maps were again compared to the AquaMaps rasters to examine distribution alignment and area ratio.
+To examine errors of commission related to depth, we selected corals as a case study due to their importance in supporting biodiversity as well as their dependence on photosynthesis.  Extracting data from the IUCN API [@REF?] we identified the depth limitations of each of the coral species mapped in the IUCN dataset.  We created a 200 m bathymetry raster from Natural Earth's 200 m bathymetry polygon [@natural_earth_XXX] ___(Fig SXXX)___ and masked our IUCN coral rasters to identify mapped coral presence below 200 m.  The resulting maps were again compared to the AquaMaps rasters to examine distribution alignment and area ratio.
 
 AquaMaps uses Food and Agriculture Organization of the United Nations (FAO) Major Fishing Area [@REF] boundaries as a rough method of constraining species ranges to appropriate georegions.  To explore the impact of these artificial constraints on species range predictions, we chose to focus on boundaries defined by longitude, as they seem less likely to relate to ecological conditions than boundaries defined by latitude.  As an example, we identified all AquaMaps species whose eastern or western range limit between between 5° S and 25° N latitudes coincided with the large vertical boundary between FAO regions 71 and 77 at 175° W longitude.  
 
