--- a/ms_3_res_disc_concl.Rmd
+++ b/ms_3_res_disc_concl.Rmd
@@ -2,14 +2,25 @@
 output: pdf_document
 ---
 
+<!--
+Results, Discussion, Conclusions
+
+These sections may all be separate, or may be combined to create a mixed Results/Discussion section (commonly labeled “Results and Discussion”) or a mixed Discussion/Conclusions section (commonly labeled “Discussion”). These sections may be further divided into subsections, each with a concise subheading, as appropriate. These sections have no word limit, but the language should be clear and concise.
+
+Together, these sections should describe the results of the experiments, the interpretation of these results, and the conclusions that can be drawn.
+
+Authors should explain how the results relate to the hypothesis presented as the basis of the study and provide a succinct explanation of the implications of the findings, particularly in relation to previous related studies and potential future directions for research.
+
+PLOS ONE editorial decisions do not rely on perceived significance or impact, so authors should avoid overstating their conclusions. See the PLOS ONE Criteria for Publication for more information.
+-->
 
 # Results and Discussion
 
 ## Taxonomic and geographic coverage
 
-- figure 1 and caption
+[results] The two datasets have notably different taxonomic (Fig 1A) and regional (Figs 1B, 1C) coverage.  AquaMaps encompasses a broader range of taxa than IUCN, as IUCN spatial data files are only available for select taxonomic groups that have been comprehensively assessed. While species numbers in both datasets peak in tropical latitudes near the equator, species counts for IUCN maps drop quickly beyond 30°N and 30°S, while species counts for AquaMaps remain robust well into temperate latitudes.  The longitude frequency plots show a slight shift in the IUCN dataset away from the Atlantic and eastern Pacific compared to AquaMaps.  
 
-[results] The two datasets have notably different taxonomic (Fig. 1A) and regional (Figs. 1B, 1C) coverage.  AquaMaps encompasses a broader range of taxa than IUCN, as IUCN spatial data files are only available for select taxonomic groups that have been comprehensively assessed. While species numbers in both datasets peak in tropical latitudes near the equator, species counts for IUCN maps drop quickly beyond 30°N and 30°S, while species counts for AquaMaps remain robust well into temperate latitudes.  The longitude frequency plots show a slight shift in the IUCN dataset away from the Atlantic and eastern Pacific compared to AquaMaps.  
+> __Fig 1.__ (A) Number and proportion of species by taxa included in each dataset.  Overlapping species are dominated by bony fishes (`r format(n_bonyfish, big.mark = ',')` species, primarily tropical taxa) and corals (`r format(n_corals, big.mark = ',')` species).  (B, C) Global marine species count per 0.5° cell according to (B) AquaMaps and (C) IUCN.  The margin frequency plots show relative species count per cell at each latitude and longitude. 
 
 <!-- need discussion here? [discussion] Each dataset offers spatial information on a -->
 
@@ -48,42 +59,48 @@ med_occ_q123 <- round(median(spp_quads_occ$mean_occ[spp_quads_occ$quad %in% c('q
 
 ## Distribution and range area alignment
 
-[discussion] To explore differences in species distribution and range between the two datasets, we plotted the distribution alignment (how much of the smaller range falls within the larger range, i.e., where on the map) against the area ratio (ratio of smaller range area to larger range area, i.e., how much of the map) for each shared species (Fig. 2A).  Where two independent methods predict presence (or absence) of a species in the same location, we can assume a higher confidence in the accuracy of that prediction.  Where one method predicts presence while the other predicts absence, we can investigate potential sources of commission and omission errors to refine our understanding of the species' range.  Understanding these sources of error can provide guidance to improve predictions of species range even when only one source of spatial data is available.
+[discussion] To explore differences in species distribution and range between the two datasets, we plotted the distribution alignment (how much of the smaller range falls within the larger range, i.e., where on the map) against the area ratio (ratio of smaller range area to larger range area, i.e., how much of the map) for each shared species (Fig 2A).  Where two independent methods predict presence (or absence) of a species in the same location, we can assume a higher confidence in the accuracy of that prediction.  Where one method predicts presence while the other predicts absence, we can investigate potential sources of commission and omission errors to refine our understanding of the species' range.  Understanding these sources of error can provide guidance to improve predictions of species range even when only one source of spatial data is available.
 
-- quad plot and bar chart and captions
+> __Fig 2.__ (A) Distribution alignment (overlap of smaller range within larger) versus area ratio (the ratio of smaller range area to the larger range area) for `r format(n_spp_both, big.mark = ',')` species included in both IUCN and AquaMaps datasets.  The upper right quadrant (quadrant 1) comprises species whose maps largely agree (better than median value) in both spatial distribution and the extent of described ranges (n = `r q1_count`; `r round(q1_count/nrow(spp_map_pairs) * 100, 1)` %).
+The upper left quadrant (quadrant 2) comprises species whose maps agree well in distribution, but disagree in area
+(n = `r q2_count`; `r round(q2_count/nrow(spp_map_pairs) * 100, 1)` %).
+The lower right quadrant (quadrant 3) includes species for which the paired maps generally agree in range area, but disagree on where those ranges occur
+(n = `r q3_count`; `r round(q3_count/nrow(spp_map_pairs) * 100, 1)` %).
+The lower left quadrant (quadrant 4) indicates species for which the map pairs agree poorly in both area and distribution
+(n = `r q4_count`; `r round(q4_count/nrow(spp_map_pairs) * 100, 1)` %).
+(B) Alignment quadrant breakdown of species by taxonomic group.
+
 
 [discussion] This analysis revealed a weak negative linear pattern, suggesting that increasing similarity in range area correlates with decreasing distribution alignment.
  AquaMaps tends to extrapolate species ranges into suitable areas beyond known occurrences, such that each additional unit of range predicted by AquaMaps will fall in different locations than an additional unit of range predicted using IUCN methodology. For species with dissimilar range areas, predicted distribution for the smaller range can more easily fall within the generous bounds of the larger range. For species with increasingly similar range areas, differences in methodology become more difficult to "hide," and the distribution alignment generally becomes poorer.
  
-[results] The mean distribution alignment for species included in both datasets was `r dist_align_mean`%; the mean area alignment was `r area_align_mean`%. By dividing the paired map species into quadrants based on these means, we highlight categories of relationships that help further explain this general pattern. Representative maps from each category are provided in the supporting materials (Fig. S1).
+[results] The mean distribution alignment for species included in both datasets was `r dist_align_mean`%; the mean area alignment was `r area_align_mean`%. By dividing the paired map species into quadrants based on these means, we highlight categories of relationships that help further explain this general pattern. Representative maps from each category are provided in the supporting materials (Fig S1).
 
-[results/discussion] The upper right quadrant includes the species (n = `r n_q1`) whose described ranges are above average in alignment of both spatial distribution and area. These species tend to be well-studied and include wide-ranging pelagic organisms such as marine mammals, tunas, and billfishes (Fig. 2B). This result is not surprising, as species with very large ranges are likely to be more aligned regardless of methodology simply because their ranges span nearly the entire map.
+[results/discussion] The upper right quadrant includes the species (n = `r n_q1`) whose described ranges are above average in alignment of both spatial distribution and area. These species tend to be well-studied and include wide-ranging pelagic organisms such as marine mammals, tunas, and billfishes (Fig 2B). This result is not surprising, as species with very large ranges are likely to be more aligned regardless of methodology simply because their ranges span nearly the entire map.
 
 [results/discussion] The area-mismatched ranges contained in the upper left quadrant (n = `r n_q2`) include many species whose spatial distribution is similar, but where one range is notably larger than the other (For `r round(n_q2_iucn_larger/n_q2 * 100, 1)`% of the species in this quadrant, the IUCN range is an average of 2.57 times larger than the AquaMaps range).  This suggests a high rate of commission and/or omission errors by one or both datasets; further analysis is required to disentangle the source and type of error contributing to poor area alignment.  The results of the coral analysis (described below) provide some insight.  
 
-[results/discussion] ___area ratio suggests similar commission/omission errors, but dist suggests otherwise___ Species found in the lower right quadrant (n = `r n_q3`) seem to represent cases of "two wrongs make a right."  For these species, IUCN and AquaMaps both predict ranges extending far beyond the overlapping region, but the methodological differences result in very different extrapolations.   Consequently, area ratios are close to 100%, though the poor distribution alignment indicates that one or both datasets are introducing significant errors. As above, further analysis is required to disentangle the causes of error.
+[results/discussion] Species found in the lower right quadrant (n = `r n_q3`) seem to represent cases of "two wrongs make a right."  For these species, IUCN and AquaMaps both predict ranges extending far beyond the overlapping region, but the methodological differences result in very different extrapolations.   Consequently, area ratios are close to 100%, though the poor distribution alignment indicates that one or both datasets are introducing significant errors. As above, further analysis is required to disentangle the causes of error.
 
-[results] The lower left quadrant includes species (n = `r n_q4`) where alignment is poor in both dimensions.  ___present a solution here?___ Data-poor species are more common in this quadrant; indeed, the median number of species occurrence records (averaging occurrences from the Ocean Biogeographic Information System (OBIS) [@obis_data_2016] and the Global Biodiversity Information Facility (GBIF) [@gbif_global_2010]) for this quadrant is `r med_occ_q4` records, compared to a median of `r med_occ_q123` records for species across the other three quadrants.  It is not surprising that range maps based upon fewer observations bear greater uncertainty.
+[results] The lower left quadrant includes species (n = `r n_q4`) where alignment is poor in both dimensions.  Data-poor species are more common in this quadrant; indeed, the median number of species occurrence records (averaging occurrences from the Ocean Biogeographic Information System (OBIS) [@obis_data_2016] and the Global Biodiversity Information Facility (GBIF) [@gbif_global_2010]) for this quadrant is `r med_occ_q4` records, compared to a median of `r med_occ_q123` records for species across the other three quadrants.  It is not surprising that range maps based upon fewer observations bear greater uncertainty.
 
 ## Coral depth exploration
 
-[discussion] Noting from Fig. 2B that corals dominate the upper-left "distribution-aligned" quadrant of Fig. 2A (n = `r n_q2_corals`; `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in this quadrant), we chose to examine the effect of explicitly restricting IUCN ranges to depths based on species' life histories.  Corals offer an excellent case study, due to their foundational role in biodiverse habitats, as well as their lack of mobility and reliance on photosynthesis.  Ocean depth preference is explicitly included in AquaMaps models.  While depth is recommended by the IUCN as a criterion for providers of range maps ("The limits of distribution can be determined by using known occurrences of the species, along with the knowledge of habitat preferences, remaining suitable habitat, elevation limited, and other expert knowledge of the species and its range." [@REF http://www.iucnredlist.org/technical-documents/red-list-training/iucnspatialresources]), it is not presented as a requirement, so we cannot take its inclusion for granted.
+[discussion] Noting from Fig 2B that corals dominate the upper-left "distribution-aligned" quadrant of Fig 2A (n = `r n_q2_corals`; `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in this quadrant), we chose to examine the effect of explicitly restricting IUCN ranges to depths based on species' life histories.  Corals offer an excellent case study, due to their foundational role in biodiverse habitats, as well as their lack of mobility and reliance on photosynthesis.  Ocean depth preference is explicitly included in AquaMaps models.  While depth is recommended by the IUCN as a criterion for providers of range maps ("The limits of distribution can be determined by using known occurrences of the species, along with the knowledge of habitat preferences, remaining suitable habitat, elevation limited, and other expert knowledge of the species and its range." [@REF http://www.iucnredlist.org/technical-documents/red-list-training/iucnspatialresources]), it is not presented as a requirement, so we cannot take its inclusion for granted.
 
-- Coral area plot
+[results] Fig 3A shows aggregated ranges of the 463 coral species mapped in the IUCN dataset, with their ranges broken into proportional area deeper and shallower than 200 m.  According to IUCN descriptions, none of these species is indicated to occur deeper than 200 m, and 94% are confined to waters shallower than 50 m; seven of the mapped species had no reported depth information.  Clipping coral ranges to shallower than 200 m eliminated an average of 47.6% of the total predicted area while still allowing for a generous estimate of suitable habitat.
 
-[results] Fig. 3A shows the 463 coral species mapped in the IUCN dataset, with their ranges broken into proportional area deeper and shallower than 200 m.  According to IUCN descriptions, none of these species is indicated to occur deeper than 200 m, and 94% are confined to waters shallower than 50 m; seven of the mapped species had no reported depth information.  Clipping coral ranges to shallower than 200 m eliminated an average of 47.6% of the total predicted area while still allowing for a generous estimate of suitable habitat.
+> __Fig 3.__ (A) Aggregate map combining ranges of the 463 coral species mapped in the IUCN dataset, showing raw ranges and ranges clipped to 200 m depth. (B) Alignment quadrant breakdown of paired map coral species using original data from IUCN and AquaMaps (as in Fig 2B) and the same species with IUCN ranges clipped to 200 m depth.
 
-- Coral new quads
-
-[results] In constraining coral ranges to shallow waters, we see a strong increase in the apparent alignment of species maps between IUCN and AquaMaps.  Using the original quadrant definitions from Fig. 2B, we see in Fig. 3B a massive shift in 354 paired-map coral species due to constraining coral depths to 200 m.  Membership in the "well-aligned" quadrant jumped from 22.4% to 76.2%, with a corresponding decrease in all other quadrants.  See SXXX to examine the shifts of individual species among the quadrants.
+[results] In constraining coral ranges to shallow waters, we see a strong increase in the apparent alignment of species maps between IUCN and AquaMaps.  Using the original quadrant definitions from Fig 2B, we see in Fig 3B a massive shift in 354 paired-map coral species due to constraining coral depths to 200 m.  Membership in the "well-aligned" quadrant jumped from 22.4% to 76.2%, with a corresponding decrease in all other quadrants.  See SXXX to examine the shifts of individual species among the quadrants.
 
 [discussion] We cannot know for certain the true distribution of each of these corals; much of the apparent over-expansion of coral ranges may be due to experts taking a precautionary approach.  But a sensible shift in method drastically decreases the likelihood of introducing commission errors, with little chance of introducing omission errors, greatly improving our confidence in the remaining reported ranges.  Note that this change applies just as well to the IUCN coral maps that are not included in the paired map analysis, and likely to other reef-associated flora and fauna.  While species depth preferences are an easy and consistent means of constraining range predictions, other conditions such as salinity and temperature could be cautiously used to refine the results of expert opinions.
 
 ## Georegional constraint exploration
 
-- AM clipped map
+[results] We identified 4,168 species whose equatorial ranges (between 5° S and 25° N) encounter a range limit at 175° W.  This longitudinal boundary created a western limit for 512 species, and eastern limit for 3,656 species.  Plotting the entire ranges of the 512 west-limited species (Fig 4) results in a very clear exclusion zone that matches perfectly with FAO region 71; while we did not focus on the boundary for region 57, a similar effect is readily apparent.
 
-[results] We identified 4,168 species whose equatorial ranges encounter a range limit at 175° W.  This longitude created a western limit for 512 species, and eastern limit for 3,656.  Plotting the entire ranges of the 512 west-limited species results in a very clear exclusion zone that matches perfectly with FAO region 71; while we did not focus on the boundary for region 57, a similar effect is readily apparent.
+> __Fig 4.__ Composite map showing AquaMaps predicted ranges for 512 species whose equatorial range (between 5° S and 25° N) encounters a western limit exactly at 175° W, the boundary between FAO Major Fishing Areas 71 and 77.  The range maps for these species conform exactly to the bounds of Area 71, as a result of AquaMaps using FAO areas as a rough georegional constraint on species ranges.  The boundary of Area 57 creates an additional clear exclusion zone for most of these species, despite the fact that this was not used as a selection criteria.
 
 [discussion] FAO Major Fishing Area boundaries provide a readily available method to roughly contrain AquaMaps predictions to appropriate ocean basins, enabling rapid modeling of thousands of species ranges.  However, these boundaries are defined for statistical purposes based on economic and political considerations rather than ecological considerations, and can result in odd species range predictions where otherwise suitable habitat encounters border between regions.  While such an odd boundary would likely be obvious when inspecting ranges of individual species, the distinction is likely to be obscured when many species ranges are aggregated as is typical for biodiversity or conservation studies.  Applying an additional spatial constraint based upon ecological or environmental boundaries, such as Marine Ecoregions of the World [@REF???], may help boost confidence in these predicted ranges; expert review, though time-consuming, is certain to improve confidence in these predicted ranges.
 
@@ -126,7 +143,7 @@ p_spp_both_ohi <- round(n_spp_both_ohi/n_spp_ohi * 100, 1)
 ```
 
 ___THIS SECTION NEEDS TO BE REWRITTEN if we choose not to omit it___
-_We calculated the OHI species status score under several scenarios to observe the impact of toggling the prioritized data set from IUCN to AquaMaps, and toggling the AquaMaps presence threshold from 40% to 0% (<a href = '#fig3'>Fig. 3</a>).  Reducing the threshold increases the apparent range of a species, so a decrease in a region’s score under scenario 1 would indicate increased spatial representation of threatened species for that region.  Shifting priority from IUCN to AquaMaps may increase or decrease a species’ apparent range, so a decrease in region score for scenario 2 may indicate a decrease in spatial representation of low-risk species, an increase in spatial representation of high-risk species, or a combination of both. Scenario three combines effects of scenarios 1 and 2._
+_We calculated the OHI species status score under several scenarios to observe the impact of toggling the prioritized data set from IUCN to AquaMaps, and toggling the AquaMaps presence threshold from 40% to 0% (<a href = '#fig3'>Fig 3</a>).  Reducing the threshold increases the apparent range of a species, so a decrease in a region’s score under scenario 1 would indicate increased spatial representation of threatened species for that region.  Shifting priority from IUCN to AquaMaps may increase or decrease a species’ apparent range, so a decrease in region score for scenario 2 may indicate a decrease in spatial representation of low-risk species, an increase in spatial representation of high-risk species, or a combination of both. Scenario three combines effects of scenarios 1 and 2._
  
 _Given that only `r p_spp_both_ohi`% of Red List-assessed species are included in both datasets, it is surprising that changing the priority for overlapping species from IUCN maps to AquaMaps would result in substantial country-level score shifts as seen in scenarios 2 and 3.  While the mean global score did not vary significantly from scenario to scenario, select countries gained up to 7.5 points while others dropped as many as 5 points.  This result indicates that especially on a national or regional scale, an arbitrary change in how the two datasets are combined can result in a different assessment of species conservation status._
 
@@ -136,7 +153,11 @@ _Given that only `r p_spp_both_ohi`% of Red List-assessed species are included i
 
 Klein et al. [-@klein_shortfalls_2015] compare the global distribution of species to the global distribution of marine protected areas to assess how well current MPAs overlap with species ranges and identify which species fall through gaps in protection.  The study relied on the AquaMaps database, using a probability of occurrence threshold of 50% or greater, to determine species presence, and the World Database of Protected Areas to define zones of marine protection.  They found that the global MPA network leaves 90.5% of marine species with less than 5% of their overall range represented within MPAs, and 1.4% of species have no protection at all (i.e., "gap" species).
 
-We recalculated the amount of under-protected and gap species using either IUCN or AquaMaps data (using the most recent AquaMaps data and a 0% threshold to allow the most meaningful comparison to IUCN's "limits of distribution", <a href = '#fig4'>Fig. 4</a>).  We found a five-fold increase in the proportion of gap species (6.4% of species vs. 1.2%) and dramatically larger proportion of species with less than 2% of their range protected (73.2% of species vs. 47.7%).  However, this comparison also indicates a larger proportion of well-protected species with greater than 10% of range protected (2.9% of species vs. 1.5%).
+We recalculated the amount of under-protected and gap species using either IUCN or AquaMaps data (using the most recent AquaMaps data and a 0% threshold to allow the most meaningful comparison to IUCN's "limits of distribution", <a href = '#fig4'>Fig 4</a>).  We found a five-fold increase in the proportion of gap species (6.4% of species vs. 1.2%) and dramatically larger proportion of species with less than 2% of their range protected (73.2% of species vs. 47.7%).  However, this comparison also indicates a larger proportion of well-protected species with greater than 10% of range protected (2.9% of species vs. 1.5%).
+
+> __Fig 5.__  Percent of species range covered by MPAs based upon methods in Klein et al. (2015).  Scenario 1 replicates the original results, measuring protected range of species in AquaMaps 2014 dataset, with a 50% presence threshold, against the 2014 World Database of Protected Areas, filtered for IUCN categories I-IV that overlap marine areas.  Scenario 2 updates the results using AquaMaps 2015, showing very small changes despite the inclusion of an additional 5,545 species.  Scenario 3, using 2015 AquaMaps data, drops the presence threshold to zero, showing an expected decrease in gap species, but also a decrease in species with 5% or greater protected range.  Scenario 4 adds an additional 1745 species unique to IUCN, resulting in increases in gap species and species with less than 2% coverage.  Scenario 5 examines species MPA coverage using only the IUCN dataset.
+
+[discussion?]
 
 # Conclusions
 
@@ -150,6 +171,6 @@ For either data set, maps based on few occurrences are more likely to bear high 
 
 <!-- ___OMIT:___ _Many studies using AquaMaps data test the sensitivity of results by varying the probability of occurrence threshold to determine presence.  This decision ultimately represents a tradeoff between errors of commission (low threshold) and omission (high threshold).  Using AquaMaps in conjunction with IUCN can mitigate potential errors, while also increasing the taxonomic and spatial breadth of coverage, as long as the differences between the datasets can be reasonably minimized.  In this case, a presence threshold of 0% most closely approximates the "limits of distribution" criterion defined by IUCN data providers._ -->
 
-To achieve more comprehensive global coverage of species ranges these two datasets can be used together, understanding that the underlying differences complicate such direct comparisons.  Major considerations include aligning the criteria used to determine "presence" (e.g. selecting an appropriate presence threshold for AquaMaps; _a presence threshold of 0% most closely approximates the "limits of distribution" criterion described by IUCN range maps_ ___- not really discussed or backed up here___) and addressing mechanisms that introduce errors of commission and omission. ___as it stands, this paper really doesn't go into this very much; omit this paragraph?___
+To achieve more comprehensive global coverage of species ranges these two datasets can be used together, understanding that the underlying differences complicate such direct comparisons.  Major considerations include aligning the criteria used to determine "presence" (e.g. selecting an appropriate presence threshold for AquaMaps; _a presence threshold of 0% most closely approximates the "limits of distribution" criterion described by IUCN range maps_ ___- not really discussed or backed up here___) and addressing mechanisms that introduce errors of commission and omission. ___as it stands, this paper really doesn't go into combining datasets and how to do it; omit this paragraph?___
 
 Effective management and protection of marine species depends on a robust understanding of where species exist and where they do not; without this knowledge we risk wasting resources protecting low-value regions while missing opportunities to protect critical ones. By identifying the differences between these two fundamental marine species range datasets and understanding the likely mechanisms causing these discrepancies, we improve our ability to develop strategic and effective conservation policy that supports a resilient ocean ecosystem.
