--- a/ms_5_figures.Rmd
+++ b/ms_5_figures.Rmd
@@ -12,115 +12,108 @@ output:
     toc: no
 ---
 
-``` {r setup, echo = FALSE, message = FALSE, warning = FALSE}
-knitr::opts_chunk$set(fig.width = 6, fig.height = 4, fig.path = 'Figs/',
-                      echo = FALSE, message = FALSE, warning = FALSE)
 
-# library(ggplot2)
-# library(maps)
-
-
-# library(raster)
-# library(data.table)
-library(tidyr)
-library(dplyr)
-library(stringr)
-library(readr)
-
-# dir_N <- c('Windows' = '//neptune.nceas.ucsb.edu/data_edit',
-#            'Darwin'  = '/Volumes/data_edit',
-#            'Linux'   = '/var/data/ohi')[[ Sys.info()[['sysname']] ]]
-
-# dir_anx  <- file.path(dir_N, 'git-annex/globalprep/SPP_ICO')
-
-if(basename(getwd()) != 'IUCN-AquaMaps') setwd('~/github/IUCN-AquaMaps')
-
-dir_data <- 'data'
-dir_fig  <- 'figures'
-
-```
-
-``` {r load data, echo = FALSE, warning = FALSE, message = FALSE}
-### use data_explore.Rmd to create this file, if it does not yet exist.  This
-### filters out presence = Extinct from IUCN cells.
-
-data_file <- 'data/spp_list_w_area_trimmed.csv'
-spp_map_pairs <- read_csv(data_file)
-### NOTE: as of Jan 31, includes all map pairs, even ones where IUCN area == 0
-
-### generate other lists
-spp_all_file <- 'data/spp_all.csv'
-spp_all <- read_csv(spp_all_file) ### NOTE: contains duped scinames
-
-# iucn_marine_file <- 'data/spp_iucn_marine.csv'
-# spp_iucn_marine <- read_csv(iucn_marine_file) 
-
-iucn_maps_file <- 'data/spp_iucn_maps.csv'
-spp_iucn_maps <- read_csv(iucn_maps_file) %>%
-  filter(!duplicated(iucn_sid))
-
-spp_am_file <- 'data/spp_am.csv'
-spp_am <- read_csv(spp_am_file)
-
-```
-
-``` {r calc species numbers, echo = FALSE}
-n_spp_am     <- nrow(spp_am)
-n_spp_am_rev <- nrow(spp_am %>% filter(reviewed == 1))
-n_spp_iucn   <- length(unique(spp_iucn_maps$iucn_sid))
-n_spp_both   <- length(unique(spp_map_pairs$iucn_sid))
-n_spp_all    <- n_spp_am + n_spp_iucn - n_spp_both
-
-p_spp_am     <- round(n_spp_am/n_spp_all * 100, 1)
-p_spp_iucn   <- round(n_spp_iucn/n_spp_all * 100, 1)
-p_both_am    <- round(n_spp_both/n_spp_am   * 100, 1)
-p_both_iucn  <- round(n_spp_both/n_spp_iucn * 100, 1)
-p_both_all   <- round(n_spp_both/n_spp_all  * 100, 1)
-
-spp_list <- read_csv(file.path(dir_data, 'spp_list_w_area_trimmed.csv'))
-area_align_mean <- round(mean(spp_list$area_ratio, na.rm = TRUE), 1)
-dist_align_mean <- round(mean(spp_list$sm_perc, na.rm = TRUE), 1)
-
-```
 
 <!--
+Figure File Requirements
 
-Figures: Calculated at 180 characters per cm in height for one column and 360 characters per cm in height for two columns; a figure wider than 8.7 cm is two columns wide.
+The list below is an abbreviated summary of the figure specifications. Read the full details of the requirements in the corresponding sections on this page.
+  File Format:  TIFF or EPS
+  Dimensions:   Width: 789 – 2250 pixels (at 300 dpi). Height maximum: 2625 pixels (at 300 dpi).
+  Resolution:   300 – 600 dpi
+  File Size:    <10 MB
+  Text Within Figures: Arial, Times, or Symbol font only in 8-12 point
+  Figure Files: Fig1.tif, Fig2.eps, and so on. Match file name to caption label and citation.
+  Captions:     In the manuscript, not in the figure file.
+  
+  
+Dimensions:    Centimeters	    Inches	Pixels at 300 dpi
+Minimum width         6.68        2.63	              789
+Maximum width        19.05         7.5               2250
+Height maximum       22.23        8.75               2625
+  At the height maximum, the figure occupies the whole page and excludes the caption
+  “Dimensions” refers to the dimensions of the entire figure, excluding any white space. The closer figures match these dimensions, the closer they will meet expectations on publication.
 
-From PNAS http://www.pnas.org/site/authors/preparation.xhtml:
+TIPS
+  To align your figure with the text column of the PDF version of the article, make it no wider than 5.2 inches (13.2 cm). 
+  Ensure that individual images meet the pixel dimensions indicated above when preparing and saving figures with slideshow software (like Powerpoint, OpenOffice, or Keynote).
+  Make sure source images are 2,250 pixels wide if you want figures at full page width of 19.05cm.
 
-Only TIFF, EPS, and high-resolution PDF for Mac or PC are allowed for figures that will appear in the main text. Authors may submit PRC or U3D files for 3D images; these must be accompanied by 2D representations in TIFF, EPS, or high-resolution PDF format. (See SI below for supplementary material.) Color images must be in RGB (red, green, blue) mode. Include the font files for any text. Images must be final size, preferably one column width (8.7 cm). Figures wider than one column should be sized to 11.4 cm or 17.8 cm wide. Numbers, letters, and symbols should be no smaller than 6 points (2 mm) and no larger than 12 points (6 mm) after reduction and must be consistent. Composite figures must be preassembled. Figures must be submitted as separate files, not embedded in manuscript text. See the Digital Art Guidelines.
+When adjusting the figure dimensions, be sure the Chain/Lock symbol is closed. This will maintain the width and height ratio of your figure.
+Go to Image → Properties (or Image → Information) to view image dimensions.
+Resolution
+  Submit figures at the desired dimensions with a resolution no greater than 300-600 dpi. 
+  The quality of a low-resolution figure cannot be improved by simply increasing the resolution in graphics software. To improve the resolution of your figure, you must re-create the figure from the beginning.
+  Resolution below 300 results in blurred, jagged or pixelated published figures. Resolution above 600 dpi may lead to resizing of the published figure.
+  The quality of your figures is only as good as the lowest-resolution element placed in them. If you created a 72 dpi line graph and placed it in a 300 dpi TIFF, the graph will look blurred, jagged, or pixilated.
 
-See also: http://www.pnas.org/site/misc/digitalart.pdf
+File size
+  Submit files at a size of 10 MB or less.
+  Reducing TIFF file size
+    Save with LZW compression.
+    Set resolution between 300-600 dpi.
+    Flatten. A flattened TIFF has a single layer called “background” and has a smaller file size than a TIFF with “Layer 1”.
 
-Label like so: 
-Fig. 2.
-Diffraction patterns at three different angles and time-dependent structural changes of JDF-L1. (A–C) Diffraction images observed at different zone axes before time 0; n is the electron direction. (D) Femtosecond intensity changes of (200) and (201) spots with time. Two different types of dynamics were observed: a decay with a femtosecond time constant (see main text) and another without a decay.
+Text within figures
+  Use only Arial, Times, or Symbol font in 8-12 point. 
+  Do not include author names, article title, or figure number/title/caption within figure files. That information will go into your figure caption in the manuscript. Read more about submitting captions.
 
+Multi-panel figures
+  Place all panels from a multipart figure into a single page and file. If you have a multipart figure spanning multiple files:
+    Combine multiple panels into one page, or break them apart into separate figures.
+    Re-number all figures and in-text citations accordingly.
+  To create a multipanel figure from individual files, use a presentation program such as OpenOffice Impress, Microsoft PowerPoint, or Keynote for Mac. Then convert to TIFF.
+    To set up the page, use the values listed in Dimensions.
+    Use an Insert tool to place figures. Do not drag/drop or copy/paste images into the file, because this results in a 72 dpi image.
+    If your figures have numerous pictures, charts, or small text, they will render best at a resolution of 600 dpi.
 
-___consider using HCL or HSV values for colors on plots?___ or ask Mel re: good color choices.  Make sure that colors have good contrast to show up on a black-and-white print...  Should the quad plot background be colored?  How else to quickly code the four quadrants relative to the quadrant-breakdown-by-taxa plot?
+Color Mode
+  RGB (8 bit/channel) or grayscale only.
 
-**`hcl {grDevices}`**: Create a vector of colors from vectors specifying hue, chroma and luminance.
+White space
+  A 2-point white space border around each figure is recommended to prevent inadvertent cropping of content at layout. Crop out excess white space from around image content.
 
-*Usage* `hcl(h = 0, c = 35, l = 85, alpha, fixup = TRUE)`
-Arguments
+Orientation
+  Rotate and submit the figure in the orientation that you wish it to publish.
+  Figures will be inserted into the typeset article in the orientation in which they are supplied. For example, if a vertical image is submitted in a horizontal orientation, it will be set horizontally in the article.
 
-*arguments*
-- `h`: The hue of the color specified as an angle in the range [0,360]. 0 yields red, 120 yields green 240 yields blue, etc.
-- `c`: The chroma of the color. The upper bound for chroma depends on hue and luminance.
-- `l`: A value in the range [0,100] giving the luminance of the colour. For a given combination of hue and chroma, only a subset of this range is possible.
-- `alpha`: numeric vector of values in the range [0,1] for alpha transparency channel (0 means transparent and 1 means opaque).
-- `fixup`: a logical value which indicates whether the resulting RGB values should be corrected to ensure that a real color results. if fixup is FALSE RGB components lying outside the range [0,1] will result in an NA value.
+Additional Requirements for TIFF 
+  Layers
+    Flattened, with no layers. Figures with a single layer named “layer 1” or “layer 0” are in fact layered.
+  
+  Compression
+    LZW compression is required. To apply: 
+      In GIMP, use “Export” instead of “Save As”. Select TIFF as the format, and then select LZW compression.
+      In Photoshop, select “LZW compression” and “Discard Layers, and Save a Copy.”
 
-**`hsv {grDevices}`**: Create a vector of colors from vectors specifying hue, saturation and value.
+How to Submit Figures and Captions
+  Your figures contain three elements: figure files, captions, and in-text citations. When naming your figures, match the figure file name with corresponding in-text citations and the caption label in the manuscript. Example: a figure file named “Fig1.tif” should match the citation “Fig 1” and the figure label “Fig 1.” in the caption.
 
-*usage* `hsv(h = 1, s = 1, v = 1, alpha)`
+Figure Files
+  Name files in numeric order with the format: Fig1.tif, Fig2.eps, and so on.
+  Upload each figure as an individual file that is separate from the manuscript.
+  If at any point you change the numbering order of your figures, be sure to update all figure citations, captions, and file names accordingly.
 
-*arguments*
+Captions
+  Organizing
+  Place figure captions in the manuscript text in read order, immediately following the paragraph in which the figure is first cited. Do not include captions as part of the figure files or submit them in a separate document.
 
-- `h`, `s`,`v`: numeric vectors of values in the range [0, 1] for ‘hue’, ‘saturation’ and ‘value’ to be combined to form a vector of colors. Values in shorter arguments are recycled.
-- `alpha`: numeric vector of values in the range [0, 1] for alpha transparency channel (0 means transparent and 1 means opaque).
-
+Formatting
+  Figure captions have two required elements: figure label and figure title. Legends are optional.
+    Label. Name figure labels using Arabic numerals, and abbreviate the word “Figure” to “Fig” (e.g., Fig 1, Fig 2, Fig 3, etc.).
+    Title. The title should be concise and descriptive. Restrict it to 15 words or less. 
+    Legend. Place the legend directly after the title of the figure to which it belongs. Place any figure credits in the last sentence of the legend. 
+  
+  Figure legends tips
+    Be succinct: Avoid lengthy descriptions of methods. 
+    Describe the key messages of a figure: provide a description of the figure that will allow readers to understand it without referring to the text.
+    Describe each part of a multipart figure with with a lettered panel label: for example, (A) or (a).
+    Define all non-standard symbols and abbreviations.
+  
+  In-text citations
+    Cite figures with the format: Fig 1A, Fig 1B, Fig 2, Fig 3, etc.
+    Cite figures in ascending numeric order upon first appearance in the manuscript file. This includes citations to text boxes and tables. In the published article, figures are inserted according to the placement of their first citation and caption in the article. 
+    Lettered subparts of whole figures may be cited in any order in the text, provided the first mention of each whole figure is in numerical order. For example, you may cite any subpart of Fig 3 in any order (e.g., Fig 3C before Fig 3A), as long as Figs 1 and 2 have already been cited.
 -->
 
 # Figures
@@ -129,28 +122,26 @@ Arguments
 ### Fig. 1
 <a id = 'fig1'></a>
 
-![](figures/fig1a_bar_by_taxa_all.png)
-![](figures/fig1b_all_aquamaps_map.png)
-![](figures/fig1c_all_iucn_map.png)
+![](figures/bar_by_taxa_all.png)
+![](figures/all_aquamaps_map.png)
+![](figures/all_iucn_map.png)
 
 -----
 
 ### Fig. 2
 <a id = 'fig2'></a>
 
-![](figures/fig2a_scatter_quadmap.png)
-![](figures/fig2b_barchart_spp_gp_quads.png)
+![](figures/scatter_quadmap.png)
+![](figures/barchart_spp_gp_quads.png)
 
 -----
 
 ### Fig. 3
 <a id = 'fig3'></a>
 
-![coral area change due to depth clipping](figures/fig3a_coral_area_plot.png)
+![coral area change due to depth clipping](figures/coral_map.png)
 
-![coral quadmap change due to depth clipping](figures/fig3b_scatter_quadmap_corals.png)
-
-![coral quadmap breakdown](figures/fig3c_barchart_coral_quads.png)
+![coral quadmap breakdown](figures/barchart_coral_quads.png)
 
 -----
 
@@ -158,7 +149,7 @@ Arguments
 
 <a id = 'fig4'></a>
 
-![global full species list comparison](figures/fig4a_violinplot_ohi_maps.png)
+![aquamaps edge comparison](figures/am_edge_map.png)
 
 -----
 
@@ -166,11 +157,11 @@ Arguments
 
 <a id = 'fig5'></a>
 
-![Change in MPA coverage](figures/fig5_barchart_mpa_gap.png)
+![Change in MPA coverage](figures/barchart_mpa_gap.png)
 
 
 -----
 
-``` {r figure_legends, child = 'ms_5_fig_legends.Rmd'}
+``` {r figure_legends, child = 'ms_5_fig_legends.Rmd', eval = FALSE}
 ```
 
